2024-07-19 Jan Kotanski <jankotan@gmail.com>
	* improve findAttribute by adding moduleAttributeMap (#696)
	* tagged as v4.13.0

2024-07-15 Jan Kotanski <jankotan@gmail.com>
	* create output dir is does not exists (#696)
	* fix ScanFileinScanNameDir name to ScanNames (#694)
	* fix support for ScanNames=False (#695)
	* tagged as v4.12.0

2024-07-11 Jan Kotanski <jankotan@gmail.com>
	* add --online-xml-file option for nxscreate stdcomp (#687)
	* add support for ScanFileinScanNameDir mode for detector template (#689)
	* fix for eigerdectris VDS (#691)
	* tagged as v4.11.0

2024-07-10 Jan Kotanski <jankotan@gmail.com>
	* add support ScanFileInScanNameDir env variable
	* tagged as v4.10.0

2024-07-10 Jan Kotanski <jankotan@gmail.com>
	* improve support for eiger RoiMode attribute
	* tagged as v4.9.1

2024-07-09 Jan Kotanski <jankotan@gmail.com>
	* add support for eiger RoiMode attribute
	* tagged as v4.9.0

2024-07-07 Jan Kotanski <jankotan@gmail.com>
	* hide STEP datasources in  eiger templates (#673)
	* hide STEP datasources in  lambdavds templates (#675)
	* tagged as v4.8.0

2024-07-03 Jan Kotanski <jankotan@gmail.com>
	* add --id-format to nxsfileinfo metadata (#669)
	* tagged as v4.7.0

2024-07-03 Jan Kotanski <jankotan@gmail.com>
	* fix wrong parsing of summer time  (#666)
	* tagged as v4.6.2

2024-07-02 Jan Kotanski <jankotan@gmail.com>
	* fix pilc file name (#663)
	* tagged as v4.6.1

2024-07-02 Jan Kotanski <jankotan@gmail.com>
	* add pilc component template (#661)
	* tagged as v4.6.0

2024-06-27 Jan Kotanski <jankotan@gmail.com>
	* improve fix for enlarge waiting time for the server in nxsetup (#659)
	* tagged as v4.5.1

2024-06-27 Jan Kotanski <jankotan@gmail.com>
	* enlarge waiting time for the server in nxsetup (#657)
	* tagged as v4.5.0

2024-06-11 Jan Kotanski <jankotan@gmail.com>
	* add eiger9m16vds template (#654)
	* add eiger4m16vds template (#654)
	* add eiger1m16vds template (#654)
	* add eiger4m32vds template (#654)