@@ -1,5 +1,6 @@
 2024-07-19 Jan Kotanski <jankotan@gmail.com>
 	* improve findAttribute by adding moduleAttributeMap (#696)
+	* add ScanNamesNoMetadata and ScanNamesNoGrouping variables (#702)
 	* tagged as v4.13.0
 
 2024-07-15 Jan Kotanski <jankotan@gmail.com>
